fixed snaash prototype names and rounded project corners less

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
              at <a href="http://www.caida.org/home/" id="work-1">CAIDA</a> and as a Data 
              Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a> 
              before that. <br/> <br/> Apart from being in the office, you 
-             can catch me working on, or brainstorming my next project 👨🏻‍💻.</p>
+             can catch me working on or brainstorming for my next project 👨🏻‍💻.</p>
           <br><br>
           <p class="aboutHeader">Interests</p>
           <p>On good days, I spend my time burning food calories through basketball, 
@@ -62,11 +62,11 @@
         <div></div>
         <div class="movie">
           <p class="aboutHeader">Last Film Watched</p>
-          <p id="movie-title"><i>Missing Link</i></p>
+          <p id="movie-title">Missing Link</p>
           <img src="assets/lastmoviewatched.jpg" width="80%" id="movie-poster">
           <div class="movie-spacing">
             <p>IMDb Rating: 7.0 / 10 🎬</p>
-            <p><a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" id="movie-wiki">Missing Link (2019 film) - Wikipedia</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" id="movie-wiki">Missing Link - Wikipedia</a></p>
             <p class="movie-spacing">... and the film before? <a href="https://en.wikipedia.org/wiki/Shazam!_(film)" target="_blank" id="movie-wiki"><i>Shazam!</i></a></p>
           </div>
         </div>
