--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <img src="assets/quickly/thumbnail.jpg" class="not-ready">
             <div class="coming-soon">Coming Soon</div>
             <p id="title">Quickly Web App</p>
-            <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
+            <p id="summary">Class-scheduling tool for UC San Diego students with punctual intent</p>
           </div>
         </div>
         <div class="grid-item">
@@ -92,7 +92,7 @@
             <img src="assets/mymoney/thumbnail.jpg" class="not-ready">
             <div class="coming-soon">Coming Soon</div>
             <p id="title">Finance Applet</p>
-            <p id="summary">Simple, yet visually effective money tracker. Programmed in Python.</p>
+            <p id="summary">Simple yet visually effective money tracker. Programmed in Python.</p>
           </div>
         </div>
         <div class="grid-item grid-item-right">
@@ -101,7 +101,7 @@
               <img src="assets/long-term/thumbnail.gif">
             </a>
             <p id="title">Long Term</p>
-            <p id="summary">Collection of personal projects</p>
+            <p id="summary">A collection of my personal projects</p>
           </div>
         </div>
       </div>
