update landing page + colors

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         </div>
       </div>
       
-      <p id="description" class="hvr-bob">UX Engineer + Designer</p>
-      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p>
-
-      <p id="home-location">Mt Woodson Summit, San Diego</p>
+      <!-- <p id="description" class="hvr-bob">UX Engineer + Designer</p> -->
+      <p id="description">UX Engineer + Designer</p>
+      <!-- <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
+      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
     </div>
   </div>
+
+  <div id="parallax-bar"></div>
 
   <div class="content">
     <section>
@@ -97,7 +99,7 @@
         </div>
         <div class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="long-term.html">
+            <a href="https://ajzhen.com/long-term">
               <img src="assets/long-term/thumbnail.gif">
             </a>
             <p id="title">Long Term</p>
