--- a/about.html
+++ b/about.html
@@ -11,8 +11,9 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
@@ -27,11 +28,11 @@
         <div class="nav sink"><a href="https://ajzhen.herokuapp.com" id="photo" onmouseover="mo('photo')" onmouseleave="ml('photo')">Photography</a></div>
         
         <div id="darkmode" class="nav">Dark Mode
-          <label class="switch">
-            <input type="checkbox" onchange="darkmode()">
-            <span class="slider round"></span>
-          </label>
-        </div>
+            <label class="switch">
+              <input id="checkDark" type="checkbox" onchange="darkmode()">
+              <span class="slider round"></span>
+            </label>
+          </div>
 
       </div>
     </div>
@@ -84,7 +85,11 @@
       </ul>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
+    <div id="footer">
+      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="note">Built from the ground up</p>
+      <div style="clear: both"></div>
+    </div>
 
   <script src="script.js" type="text/javascript"></script>
 </body>
