--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
   <link rel="prefetch" href="assets/light-bg.jpg">
@@ -22,7 +23,7 @@
 </head>
 
 <body id="body">
-  <div id="light-bg">
+  <div id="light-bg" class="parallax">
     <div class="content-margins">
       <div id="header">
         <div id="name-div" class="sink"><a href="https://ajzhen.com" id="name" onmouseover="mo('name')" onmouseleave="ml('name')">Andrew Zhen</a></div>
@@ -119,7 +120,11 @@
       </ul>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
+    <div id="footer">
+      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="note">Built from the ground up</p>
+      <div style="clear: both"></div>
+    </div>
   </div>
 
   <script src="script.js" type="text/javascript"></script>
