--- a/zilter.html
+++ b/zilter.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102146073-1"></script>
   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
     gtag('config', 'UA-102146073-1');
   </script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zilter Web App</title>
-  <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
@@ -26,7 +34,12 @@
       </div>
     </div>
 
-    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p><p id="note">Built from the ground up</p></div>
+    <div id="footer">
+      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="note">Built from the ground up</p>
+      <div style="clear: both"></div>
+    </div>
+    
   </div>
 </body>
 </html>
