landing size and about responsiveness

--- a/about.html
+++ b/about.html
@@ -42,23 +42,30 @@
 
       <div class="aboutArea">
         <div>
-          <p class="aboutHeader">Biography</p>
-          <p>Hey! I’m a third year undergraduate student studying Cognitive 
-             Science (Design / Interaction concentration) at UC San Diego 🔱. 
-             <br/> <br/> Right now, I’m actively applying for UX Engineer and 
-             Designer intern positions for Summer '19.</p>
-          <br><br>
-          <p class="aboutHeader">Experience</p>
-          <p>Previously, I’ve had the opportunities to work as a UX developer 
-             at <a href="http://www.caida.org/home/" id="work-1">CAIDA</a> and as a Data 
-             Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a> 
-             before that. <br/> <br/> Apart from being in the office, you 
-             can catch me working on or brainstorming for my next project 👨🏻‍💻.</p>
-          <br><br>
-          <p class="aboutHeader">Interests</p>
-          <p>On good days, I spend my time burning food calories through basketball, 
-             enjoying a thoughtful thriller film, and secretly browsing cat 
-             videos on Instagram 😻.</p>
+          <div class="about-subdivs">
+            <p class="aboutHeader">Biography</p>
+            <p class="about-p">Hey! I’m a third year undergraduate student studying Cognitive 
+               Science (Design / Interaction concentration) at UC San Diego 🔱. </p>
+            <p class="about-p">Right now, I’m actively applying for UX Engineer and 
+               Designer intern positions for Summer '19.</p>
+          </div>
+          
+          <div class="about-subdivs">
+            <p class="aboutHeader">Experience</p>
+            <p class="about-p">Previously, I’ve had the opportunities to work as a UX developer 
+               at <a href="http://www.caida.org/home/" id="work-1">CAIDA</a> and as a Data 
+               Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a> 
+               before that.</p>
+            <p class="about-p">Apart from being in the office, you can catch me working on or 
+               brainstorming for my next project 👨🏻‍💻.</p>
+          </div>
+          
+          <div class="about-subdivs">
+            <p class="aboutHeader">Interests</p>
+            <p class="about-p">On good days, I spend my time burning food calories through basketball, 
+               enjoying a thoughtful thriller film, and secretly browsing cat 
+               videos on Instagram 😻.</p>
+          </div>
         </div>
         <div></div>
         <div class="movie">
