--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body id="body">
-  <div id="light-bg" class="parallax">
+  <div id="light-bg">
     <div class="content-margins">
       <div id="header">
         <div id="name-div" class="sink"><a href="https://ajzhen.com" id="name" onmouseover="mo('name')" onmouseleave="ml('name')">Andrew Zhen</a></div>
@@ -39,7 +39,6 @@
               <span class="slider round"></span>
             </label>
           </div>
-
         </div>
       </div>
       
@@ -48,9 +47,9 @@
       <!-- <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
       <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
     </div>
-  </div>
 
-  <div id="parallax-bar"></div>
+    <div id="parallax-bar"></div>
+  </div>
 
   <div class="content">
     <section>
