--- a/snaash.html
+++ b/snaash.html
@@ -54,7 +54,7 @@
               <p class="work-value">Usability and Information Architecture</p>
              </div>
           </div> 
-          <div class="work-logo"><img src="assets/snaash/logo.png"></div>
+          <div class="work-logo"><img src="assets/snaash/logo.png" width="50%"></div>
         </div>
       </div>
     </div>
@@ -326,14 +326,14 @@
       <div class="work-header"><p>Final Prototypes</p></div>
       <div>
         <p class="subheader">Answerer Interface</p>
-        <iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-5492%252C-105%252C0.749526%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <iframe style="border: none;" width="70vw" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-5492%252C-105%252C0.749526%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
     </div>
     <div class="body-container">
       <div></div>
       <div>
         <p class="subheader">Asker Interface</p>
-        <iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-1098%252C389%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <iframe style="border: none;" width="70vw" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-1098%252C389%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
     </div>
 
@@ -352,7 +352,7 @@
            between altruistic users focused on giving back to each other.</p>
       </div>
       <div></div>
-      <div class="work-logo"><img src="assets/caida/caida.png" width=50%><p>Center for Applied Internet Data Analysis</p></div>
+      <p><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></p>
       <div></div>
       <p class="subheader">A fitting fortune cookie message that I personally received</p>
     </div>
@@ -373,7 +373,7 @@
       <p id="note">Built from the ground up</p>
       <div style="clear: both"></div>
     </div>
-    
+
   </div>
 </body>
 </html>
