update movie and snaash thumbnail

--- a/about.html
+++ b/about.html
@@ -70,12 +70,12 @@
         <div></div>
         <div class="movie">
           <p class="aboutHeader">Last Film Watched</p>
-          <p id="movie-title">Missing Link</p>
-          <img src="assets/lastmoviewatched.jpg" width="80%" id="movie-poster">
+          <!-- <p id="movie-title">Avengers: Endgame</p> -->
+          <img src="assets/movies/avengers-endgame.jpg" width="80%" id="movie-poster">
           <div class="movie-spacing">
-            <p>IMDb Rating: 7.0 / 10 🎬</p>
-            <p><a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" id="movie-wiki">Missing Link - Wikipedia</a></p>
-            <p class="movie-spacing">... and the film before? <a href="https://en.wikipedia.org/wiki/Shazam!_(film)" target="_blank" id="movie-wiki"><i>Shazam!</i></a></p>
+            <p>IMDb Rating: 8.9 / 10 🎬</p>
+            <p><a href="https://en.wikipedia.org/wiki/Avengers:_Endgame" target="_blank" id="movie-wiki">Avengers: Endgame - Wikipedia</a></p>
+            <p class="movie-spacing">... and the film before? <a href="https://en.wikipedia.org/wiki/Missing_Link_(2019_film)" target="_blank" id="movie-wiki">Missing Link</a></p>
           </div>
         </div>
         <div></div>
