--- a/snaash.html
+++ b/snaash.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
-<body>
+<body id="snaash-bg">
   <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
@@ -54,7 +54,8 @@
               <p class="work-value">Usability and Information Architecture</p>
              </div>
           </div> 
-          <div class="work-logo"><img src="assets/snaash/logo.png" width="50%"></div>
+
+          <!-- <div class="work-logo"><img src="assets/snaash/logo.png" width="50%"></div> -->
         </div>
       </div>
     </div>
@@ -326,14 +327,14 @@
       <div class="work-header"><p>Final Prototypes</p></div>
       <div>
         <p class="subheader">Answerer Interface</p>
-        <iframe style="border: none;" width="70vw" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-5492%252C-105%252C0.749526%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <iframe style="border: none;" width="100%" height="50%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-5492%252C-105%252C0.749526%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
     </div>
     <div class="body-container">
       <div></div>
       <div>
         <p class="subheader">Asker Interface</p>
-        <iframe style="border: none;" width="70vw" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-1098%252C389%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <iframe style="border: none;" width="100%" height="50%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-1098%252C389%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
     </div>
 
