--- a/zilter.html
+++ b/zilter.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
-<body>
+<body id="zilter-bg">
   <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
@@ -31,6 +31,30 @@
             <p class="slider round"></p>
           </label>
         </div> -->
+      </div>
+    </div>
+
+    <div id="zilter-banner" class="banner">
+      <div id="valign-div">
+        <div class="heading-container">
+          <div>
+            <p class="work-title">Zilter Web App</p>
+            <div class="inline-div" style="padding-right: 4.5vw">
+              <p class="work-header">Date</p>
+              <p class="work-header">Duration</p>
+              <p class="work-header">Role</p>
+              <p class="work-header">Teammates</p>
+              <p class="work-header">Course</p>
+            </div>
+            <div class="inline-div">
+              <p class="work-value">October 2018</p>
+              <p class="work-value">2.5 Months</p>
+              <p class="work-value">UX Developer</p>
+              <p class="work-value">C. Wong, L. Ahn</p>
+              <p class="work-value">Interaction Design</p>
+             </div>
+          </div> 
+        </div>
       </div>
     </div>
 
