--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         </div>
       </div>
       
-      <!-- <p id="description" class="hvr-bob">UX Engineer + Designer</p> -->
-      <p id="description">UX Engineer + Designer</p>
-      <!-- <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
-      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
+      <p id="description" class="hvr-bob">UX Engineer + Designer</p>
+      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p>
+      
+      <!-- <p id="description">UX Engineer + Designer</p>
+      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p> -->
     </div>
 
     <div id="parallax-bar"></div>
