--- a/long-term.html
+++ b/long-term.html
@@ -25,10 +25,11 @@
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
+        
         <!-- <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
-            <input type="checkbox">
-            <p class="slider round"></p>
+            <input id="checkDark" type="checkbox" onchange="darkmode()">
+            <span class="slider round"></span>
           </label>
         </div> -->
       </div>
@@ -88,5 +89,7 @@
     </div>
     
   </div>
+
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
