--- a/snaash.html
+++ b/snaash.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
-<body id="snaash-bg">
+<body id="body">
   <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
@@ -25,12 +25,13 @@
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
-        <!-- <div id="darkmode" class="nav">Dark Mode
+        
+        <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
-            <input type="checkbox">
-            <p class="slider round"></p>
+            <input id="checkDark" type="checkbox" onchange="darkmode()">
+            <span class="slider round"></span>
           </label>
-        </div> -->
+        </div>
       </div>
     </div>
 
@@ -38,20 +39,20 @@
       <div id="valign-div">
         <div class="heading-container">
           <div>
-            <p class="work-title">Snaash iOS App</p>
+            <p id="work-title">Snaash iOS App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
-              <p class="work-header">Date</p>
-              <p class="work-header">Duration</p>
-              <p class="work-header">Role</p>
-              <p class="work-header">Teammates</p>
-              <p class="work-header">Course</p>
+              <p id="work-header">Date</p>
+              <p id="work-header">Duration</p>
+              <p id="work-header">Role</p>
+              <p id="work-header">Teammates</p>
+              <p id="work-header">Course</p>
             </div>
             <div class="inline-div">
-              <p class="work-value">August 2018</p>
-              <p class="work-value">1 Month</p>
-              <p class="work-value">UX Designer</p>
-              <p class="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p>
-              <p class="work-value">Usability and Information Architecture</p>
+              <p id="work-value">August 2018</p>
+              <p id="work-value">1 Month</p>
+              <p id="work-value">UX Designer</p>
+              <p id="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p>
+              <p id="work-value">Usability and Information Architecture</p>
              </div>
           </div> 
 
@@ -61,17 +62,17 @@
     </div>
 
     <div class="body-container">
-      <div class="work-header"><p>Tools + Skills</p></div>
+      <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p>— Figma</p>
-        <p>— Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
+        <p class="line-height-210">— Figma</p>
+        <p class="line-height-210">— Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
       </div>
     </div>
 
     <div class="body-container">
-      <div class="work-header"><p>Description</p></div>
+      <div><p id="body-header">Description</p></div>
       <div>
-        <p>For a web design course spanning 5 weeks, our team was tasked with 
+        <p class="line-height-210">For a web design course spanning 5 weeks, our team was tasked with 
            designing and prototyping an accessible web application to accomodate 
            the lifestyles of people who are aged 50 and up. Our idea-turned 
            product would then participate in a Shark Tank, entrepreneur-themed 
@@ -82,31 +83,32 @@
 
     <div class="impact-container">
       <div></div>
-      <div><img src="assets/snaash/sharktank.jpg"></div>
+      <div><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(50%);"></div>
       <div class="caption quote">
-        <p>“ SNAASH is bridging the gap between generations. The elderly can 
+        <p class="line-height-210"><i>“ SNAASH is bridging the gap between generations. The elderly can 
            share advice with those who need it and the young ones can ask for 
            guidance. Through their app, you’re able to post a question and 
            receive a thoughtful voice response from someone who may have 
-           experienced it before. ” <br/><br/>
+           experienced it before. ” </i><br/><br/>
            — Shark Tank: COGS 187A Edition</p>
       </div>
     </div>
 
     <div class="body-container">
-      <div class="work-header"><p>Responsibility</p></div>
+      <div><p id="body-header">Responsibility</p></div>
       <div>
-        <p>Given the broad prompt of creating a digital tool for a population 
-           of elders, my initial contribution was helping narrow our thoughts 
-           to a more focused concept: </p>
+        <p class="line-height-210">Given the broad prompt of creating a digital 
+           tool for a population of elders, my initial contribution was helping 
+           narrow our thoughts to a more focused concept: </p>
         <br/> <br/>
         <p class="subheader">Need Finding</p>
-        <p>I felt that older generations needed a way to keep up-to-date with 
-           younger generations in terms of culture, trends, etc. For example, 
-           grandparents have a difficult time trying to understand how their 
-           grandchildren are feeling and what they might be going through. They 
-           might even have trouble communicating and being on the same page, so 
-           to speak. So our team took this problem and we brainstormed. <br/><br/>
+        <p class="line-height-210">I felt that older generations needed a way 
+           to keep up-to-date with younger generations in terms of culture, 
+           trends, etc. For example, grandparents have a difficult time trying 
+           to understand how their grandchildren are feeling and what they 
+           might be going through. They might even have trouble communicating 
+           and being on the same page, so to speak. So our team took this 
+           problem and we brainstormed. <br/><br/>
 
            Specifically, we took the needs of those seeking advice and the time 
            and wisdom of those are willing to share it and created an app concept. 
@@ -125,7 +127,7 @@
     <div class="body-container">
       <div class="work-header"></div>
       <div>
-        <p>To summarize, the key challenges that we faced were: <br/>
+        <p class="line-height-210">To summarize, the key challenges that we faced were: <br/>
            — helping the elderly stay connected socially <br/>
            — making communication personal and genuine in a digital world <br/>
            — finding a safe and secure platform for anyone to ask real-life, personal questions</p>
@@ -136,7 +138,7 @@
       <div></div>
       <div>
         <p class="subheader">Information Architecture</p>
-        <p>With our advice-giving idea in mind, we set out to outline the 
+        <p class="line-height-210">With our advice-giving idea in mind, we set out to outline the 
            information architecture, first with post-it notes then digitally 
            with more detail. We determined that we would build for mobile 
            rather than for desktop because of the prevalence of mobile devices 
@@ -148,7 +150,7 @@
     <div class="impact-container">
       <div></div>
       <div class="caption">
-        <p>Originally at the bottom navigation bar, we had a profile tab, a 
+        <p class="line-height-210">Originally at the bottom navigation bar, we had a profile tab, a 
            home tab that leads to the feed of questions, and an ask tab (all in 
            the color blue in the image to the right). We also cared to include 
            functions such as bookmarks and history since these convenient 
@@ -168,7 +170,7 @@
       <div></div>
       <div>
         <p class="subheader">Prototyping</p>
-        <p>After reviewing what was outlined, we decided we wanted to keep only 
+        <p class="line-height-210">After reviewing what was outlined, we decided we wanted to keep only 
            what was essential in order to meet usability standards as well as 
            create a streamlined user experience, especially for 50+ aged folks.
            <br/><br/>
@@ -183,7 +185,7 @@
     <div class="impact-container">
       <div></div>
       <div class="caption">
-        <p>We first conducted user testing on paper prototypes, a collection of 
+        <p class="line-height-210">We first conducted user testing on paper prototypes, a collection of 
            each group members’ low-fidelity mock-ups. We focused our critiques 
            on the layout of the interface and the logical flow of user interactions.
            <br/><br/>
@@ -201,25 +203,25 @@
       <div></div>
       <div>
         <img src="assets/snaash/answerer.png">
-        <center class="subheader">Answerer Interface</center>
+        <p id="img-caption">Answerer Interface</p>
       </div>
       <div></div>
       <div>
         <img src="assets/snaash/asker.png">
-        <center class="subheader">Asker Interface</center>
+        <p id="img-caption">Asker Interface</p>
       </div>
       <div></div>
     </div>
 
-    <div class="body-container">
+    <div class="body-container" style="margin-top: 10vw; margin-bottom: 2vw">
       <div></div>
       <div>
         <p class="subheader">Competitive Analysis</p>
-        <p>There already exists a few other options when looking for a place 
-           with advice. Our most notable competitors include Quora, Reddit, and 
-           Yahoo Answers. By taking a closer look at the competition, we singled 
-           each one out and created a table to summarize Snaash’s advantages 
-           over each of them.</p>
+        <p class="line-height-210">There already 
+           exists a few options for places that provide advice. Our most 
+           notable competitors include Quora, Reddit, and Yahoo Answers. Taking 
+           a closer look at the competition, we singled each one out and 
+           summarized Snaash’s advantages over them:</p>
       </div>
     </div>
 
@@ -232,10 +234,10 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p><b>Notable Features</b> <br/>
+        <p class="line-height-210"><b>Notable Features</b> <br/>
            — Accountability and Maturity <br/>
            — “BNBR (Be Nice Be Respectful)” Policy</p> <br/>
-        <p><b>Comments:</b> <br/>
+        <p class="line-height-210"><b>Comments:</b> <br/>
            One complaint is that some Quora users can be immature because there 
            is no restriction on who can ask/answer questions (besides having an 
            account). By enforcing an age restriction on who can answer questions, 
@@ -257,11 +259,11 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p><b>Notable Features</b> <br/>
+        <p class="line-height-210"><b>Notable Features</b> <br/>
            — Semi-Anonymity through Usernames <br/>
            — Outdated yet Minimal Design <br/>
            — Pay (“give gold”) to Unlock Features</p> <br/>
-        <p><b>Comments:</b> <br/>
+        <p class="line-height-210"><b>Comments:</b> <br/>
            Though usernames are semi-anonymous, post/comment history is 
            available to anyone. On Snaash, we want to keep the confidentiality 
            of users who post questions seeking advice. Reddit also allows users 
@@ -272,18 +274,18 @@
 
     <div class="ca-container">
       <div></div>
-      <div><img src="assets/snaash/reddit.png"></div>
+      <div><img id="reddit" src="assets/snaash/reddit-dark.png"></div>
       <div></div>
     </div>
     <br/>
     <div class="body-container">
       <div></div>
       <div>
-        <p><b>Notable Features</b> <br/>
+        <p class="line-height-210"><b>Notable Features</b> <br/>
            — Link all Activity back to User <br/>
            — Anonymity through Nickname <br/>
            — Questions have Opening and Closing Period</p> <br/>
-        <p><b>Comments:</b> <br/>
+        <p class="line-height-210"><b>Comments:</b> <br/>
            Yahoo has a feature of linking all activity back to its user, which 
            the user can delete during a temporary window of time. A user can be 
            anonymous to the public through a nickname but any activity is still 
@@ -303,11 +305,11 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p><b>Notable Features</b> <br/>
+        <p class="line-height-210"><b>Notable Features</b> <br/>
            — Complete Anonymity <br/>
            — Age Restriction for Respondants <br/>
            — Voice Answers</p> <br/>
-        <p><b>Comments:</b> <br/>
+        <p class="line-height-210"><b>Comments:</b> <br/>
            Snaash allows users to ask questions to a qualified group of elders 
            without having their profie revealed. Snaash borrows a feature from 
            other competitors: a voting system where the best answers can be 
@@ -323,49 +325,49 @@
       <div><img src="assets/snaash/competitive-analysis.jpg"></div>
     </div>
 
-    <div class="body-container">
-      <div class="work-header"><p>Final Prototypes</p></div>
+    <div class="p-container">
+      <div><p id="body-header">Final Interactive Prototypes</p></div>
       <div>
-        <p class="subheader">Answerer Interface</p>
-        <iframe style="border: none;" width="100%" height="50%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-5492%252C-105%252C0.749526%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <p class="subheader" style="text-align: center">Answerer Interface</p>
+        <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
-    </div>
-    <div class="body-container">
+
       <div></div>
+
       <div>
-        <p class="subheader">Asker Interface</p>
-        <iframe style="border: none;" width="100%" height="50%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-1098%252C389%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <p class="subheader" style="text-align: center">Asker Interface</p>
+        <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
       </div>
     </div>
 
     <div class="conclusion-container" style="margin-bottom: 3vw">
-      <div class="work-header"><p>Conclusion + <br/> Key Takeaways</p></div>
+      <div><p id="body-header">Conclusion + <br/>Takeaways</p></div>
       <div>
-        <p>Socializing and keeping in touch with friends and family is key to a 
-           longer, happier life. For our older generation, we have identified 
-           that they could improve in this area. As for the younger audiences, 
-           we understood that they valued resources to learn from and to express 
-           their concerns. <br/><br/>
+        <p class="line-height-210">Socializing and keeping in touch with 
+           friends and family is key to a longer, happier life. For our older 
+           generation, we have identified that they could improve in this area. 
+           As for the younger audiences, we understood that they valued 
+           resources to learn from and to express their concerns. <br/><br/>
 
-           Our web app helps these two different demographic groups with their 
+           Our web app helps these two demographic groups with their 
            respective needs. By bringing together the wisdom of one group with 
            the eagerness of the other, Snaash creates a healthy relationship 
            between altruistic users focused on giving back to each other.</p>
       </div>
       <div></div>
-      <p><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></p>
+      <center><br/><br/><img src="assets/snaash/fortune-cookie.png" width="50%"></center>
       <div></div>
-      <p class="subheader">A fitting fortune cookie message that I personally received</p>
+      <p id="img-caption">A fitting fortune cookie message that I personally received</p>
     </div>
 
     <div class="body-container" style="margin-bottom: 10vw">
       <div></div>
       <div>
         <p class="subheader">Future Plans</p>
-        <p>Given a chance to bring Snaash to life, we would need financing to 
-           pay for a team of software developers to develop the application. In 
-           addition, we would need to find a way to verify the age of those 50 
-           and up to avoid wrongful use of the application.</p>
+        <p class="line-height-210">Given a chance to bring Snaash to life, we 
+           would need financing to pay for a team of software developers to 
+           develop the application. In addition, we would need to find a way to 
+           verify the age of those 50 and up to avoid wrongful use of the application.</p>
       </div>
     </div>
 
@@ -376,5 +378,7 @@
     </div>
 
   </div>
+
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
