--- a/zilter.html
+++ b/zilter.html
@@ -25,10 +25,11 @@
       <div id="nav-div">
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
+        
         <!-- <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
-            <input type="checkbox">
-            <p class="slider round"></p>
+            <input id="checkDark" type="checkbox" onchange="darkmode()">
+            <span class="slider round"></span>
           </label>
         </div> -->
       </div>
@@ -36,7 +37,7 @@
 
     <div id="zilter-banner" class="banner">
       <div id="valign-div">
-        <div class="heading-container">
+        <div id="heading-container">
           <div>
             <p class="work-title">Zilter Web App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
@@ -65,5 +66,7 @@
     </div>
     
   </div>
+
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
