long term darkmode

--- a/caida.html
+++ b/caida.html
@@ -61,15 +61,15 @@
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Tools + Skills</p></div></div>
       <div class="grid">
-        <p>— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
-        <p>— Web Application Development, User Interface, Front-End Design</p>
+        <p class="line-height-210">— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
+        <p class="line-height-210">— Web Application Development, User Interface, Front-End Design</p>
       </div>
     </div>
 
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Description</p></div></div>
       <div class="grid">
-        <p>For the Summer of 2018, I served as a UX Developer for a web 
+        <p class="line-height-210">For the Summer of 2018, I served as a UX Developer for a web 
            platform called QUINCE, an abbreviation for the lengthy title: Quality 
            of Internet Consumer Experience. This platform enables end-users to 
            easily participate in various internet measurement tasks. Participants can,
@@ -81,7 +81,7 @@
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Responsibility</p></div></div>
       <div class="grid">
-        <p>Under the supervision of Ricky, I helped design and develop the web 
+        <p class="line-height-210">Under the supervision of Ricky, I helped design and develop the web 
            platform to increase participant engagement. Naturally, I spent some
            time researching effective ways to gamify measurement tasks so that 
            they would appeal more to paricipants. As for the visual side, I 
@@ -96,7 +96,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p>The consent form is the first thing participants see when accessing 
+        <p class="line-height-210">The consent form is the first thing participants see when accessing 
            the web platform. The form was expanded vertically to cover a larger
            area of the screen than before and a shadow was placed at the bottom
            of the form to indicate that there is scroll functionality. At a 
@@ -109,7 +109,7 @@
     <div class="impact-container">
         <div class="grid"></div>
         <div class="grid caption">
-          <p>The tutorial modal window introduces participants to the interface 
+          <p class="line-height-210">The tutorial modal window introduces participants to the interface 
              and what their jobs are. Originally, the window was much larger to 
              accomodate a bulkier logo and the oversized font. The redesign 
              lessened font size and inserted helpful paragraph spacing. The logo 
@@ -122,7 +122,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p>I designed and implemented the onboarding process that includes the 
+        <p class="line-height-210">I designed and implemented the onboarding process that includes the 
            sign-in, sign-up, and forgot password screens. I also conceptualized 
            this design with the other modal windows in mind. I chose a deep 
            green to symbolize the currency that participants may earn through 
@@ -134,7 +134,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p>In order to implement a subtle yet immersive, interactive US map, I 
+        <p class="line-height-210">In order to implement a subtle yet immersive, interactive US map, I 
            dug into amCharts, a JavaScript charting and mapping library, to 
            tweak changes within the code. The result is a seamless experience 
            between interacting with the map and visualizing geographical 
@@ -147,7 +147,7 @@
     <div class="conclusion-container">
       <div class="grid"><div><p id="body-header">Conclusion + Takeaways</p></div></div>
       <div class="grid">
-        <p>Starting off at the internship was a little rough: I had to become 
+        <p class="line-height-210">Starting off at the internship was a little rough: I had to become 
           familiar with Meteor, get certain dependencies installed on my 
           computer, join services for communication with the team, attain 
           access for special privileges, etc. <br/> <br/>
