--- a/snaash.html
+++ b/snaash.html
@@ -360,7 +360,7 @@
       <p id="img-caption">A fitting fortune cookie message that I personally received</p>
     </div>
 
-    <div class="body-container" style="margin-bottom: 10vw">
+    <div class="conclusion-container">
       <div></div>
       <div>
         <p class="subheader">Future Plans</p>
