--- a/long-term.html
+++ b/long-term.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
 </head>
-<body>
+<body id="body">
   <div class="content-margins">
     <div id="header">
       <div id="home-div"><a href="https://ajzhen.com" id="home">Home</a></div>
@@ -26,12 +26,12 @@
         <div class="nav"><a href="https://ajzhen.com/about" id="about">About</a></div>
         <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo">Photography</a></div>
         
-        <!-- <div id="darkmode" class="nav">Dark Mode
+        <div id="darkmode" class="nav">Dark Mode
           <label class="switch">
             <input id="checkDark" type="checkbox" onchange="darkmode()">
             <span class="slider round"></span>
           </label>
-        </div> -->
+        </div>
       </div>
     </div>
 
@@ -40,8 +40,8 @@
         <div class="heading-container">
           <div>
             <div>
-              <p class="work-title longterm-title">Long Term</p>
-              <p class="longterm-description">A collection of my personal projects</p>
+              <p id="longterm-title" id="work-title">Long Term</p>
+              <p id="longterm-description">A collection of my personal projects</p>
             </div>
             <div></div>
           </div>
