--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
           </div>
         </div>
         <div class="grid-item">
-          <div class="grid-content no-transition">
-            <img src="assets/zilter/thumbnail.jpg" class="not-ready">
-            <div class="coming-soon">Coming Soon</div>
+          <div class="grid-content">
+            <a href="https://ajzhen.com/zilter">
+              <img src="assets/zilter/thumbnail.jpg">
+            </a>
             <p id="title">Zilter Web App</p>
             <p id="summary">Website concept with built-in research done conveniently for you</p>
           </div>
