--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         </div>
       </div>
       
-      <p id="description" class="hvr-bob">UX Engineer + Designer</p>
-      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p>
+      <!-- <p id="description" class="hvr-bob">UX Engineer + Designer</p>
+      <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
       
-      <!-- <p id="description">UX Engineer + Designer</p>
-      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p> -->
+      <p id="description">UX Engineer + Designer</p>
+      <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
     </div>
 
     <div id="parallax-bar"></div>
@@ -54,59 +54,58 @@
 
   <div class="content">
     <section>
-      <div class="wip">Thank you for your patience while the work pages are being developed</div><br><br>
       <div class="grid-container">
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg">
+              <img src="assets/caida/thumbnail-bw.jpg">
             </a>
-            <p id="title">UX Developer Internship</p>
-            <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
           </div>
+          <p id="title">UX Developer Internship</p>
+          <p id="summary">Summer-long experience at The Center for Applied Internet Data Analysis</p>
         </div>
         <div class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg">
+              <img src="assets/snaash/thumbnail-bw.jpg">
             </a>
-            <p id="title">Snaash iOS App</p>
-            <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
           </div>
+          <p id="title">Snaash iOS App</p>
+          <p id="summary">Advice-giving platform, powered by the wisdom of elders</p>
         </div>
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/zilter">
-              <img src="assets/zilter/thumbnail.jpg">
+              <img src="assets/zilter/thumbnail-bw.jpg">
             </a>
-            <p id="title">Zilter Web App</p>
-            <p id="summary">Website concept with built-in research done conveniently for you</p>
           </div>
+          <p id="title">Zilter Web App</p>
+          <p id="summary">Website concept with built-in research done conveniently for you</p>
         </div>
         <div class="grid-item grid-item-right">
-          <div class="grid-content no-transition">
-            <img src="assets/quickly/thumbnail.jpg" class="not-ready">
+          <div class="grid-content">
+            <img src="assets/quickly/thumbnail-bw.jpg" class="not-ready no-transition">
             <div class="coming-soon">Coming Soon</div>
-            <p id="title">Quickly Web App</p>
-            <p id="summary">Class-scheduling tool for UC San Diego students with punctual intent</p>
           </div>
+          <p id="title" style="color: inherit;">Quickly Web App</p>
+          <p id="summary">Class-scheduling tool for UC San Diego students with punctual intent</p>
         </div>
         <div class="grid-item">
-          <div class="grid-content no-transition">
-            <img src="assets/mymoney/thumbnail.jpg" class="not-ready">
+          <div class="grid-content">
+            <img src="assets/mymoney/thumbnail-bw.jpg" class="not-ready no-transition">
             <div class="coming-soon">Coming Soon</div>
-            <p id="title">Finance Applet</p>
-            <p id="summary">Simple yet visually effective money tracker. Programmed in Python.</p>
           </div>
+          <p id="title" style="color: inherit;">Finance Applet</p>
+          <p id="summary">Simple yet visually effective money tracker. Programmed in Python.</p>
         </div>
         <div class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/long-term">
-              <img src="assets/long-term/thumbnail.gif">
+              <img src="assets/long-term/thumbnail-bw.jpg">
             </a>
-            <p id="title">Long Term</p>
-            <p id="summary">A collection of my personal projects</p>
           </div>
+          <p id="title">Long Term</p>
+          <p id="summary">A collection of my personal projects</p>
         </div>
       </div>
     </section>
