--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 
     <div id="footer">
       <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
-      <p id="note">Built from the ground up</p>
+      <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
 
