--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="light-bg">
     <div class="content-margins">
       <div id="header">
-        <div id="name-div" class="sink"><a href="https://ajzhen.com" id="name" onmouseover="mo('name')" onmouseleave="ml('name')">Andrew Zhen</a></div>
+        <div id="name-div"><p id="name">Andrew <br/> Zhen</p></div>
 
         <div id="nav-div">
           <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
@@ -122,7 +122,7 @@
 
     <div id="footer">
       <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
-      <p id="note">Built from the ground up</p>
+      <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
   </div>
