--- a/snaash.html
+++ b/snaash.html
@@ -102,7 +102,7 @@
            tool for a population of elders, my initial contribution was helping 
            narrow our thoughts to a more focused concept: </p>
         <br/> <br/>
-        <p class="subheader">Need Finding</p>
+        <p class="snaash-subheader">Need Finding</p>
         <p class="line-height-210">I felt that older generations needed a way 
            to keep up-to-date with younger generations in terms of culture, 
            trends, etc. For example, grandparents have a difficult time trying 
@@ -138,7 +138,7 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="subheader">Information Architecture</p>
+        <p class="snaash-subheader">Information Architecture</p>
         <p class="line-height-210">With our advice-giving idea in mind, we set out to outline the 
            information architecture, first with post-it notes then digitally 
            with more detail. We determined that we would build for mobile 
@@ -170,7 +170,7 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="subheader">Prototyping</p>
+        <p class="snaash-subheader">Prototyping</p>
         <p class="line-height-210">After reviewing what was outlined, we decided we wanted to keep only 
            what was essential in order to meet usability standards as well as 
            create a streamlined user experience, especially for 50+ aged folks.
@@ -217,7 +217,7 @@
     <div class="body-container" style="margin-top: 10vw; margin-bottom: 2vw">
       <div></div>
       <div>
-        <p class="subheader">Competitive Analysis</p>
+        <p class="snaash-subheader">Competitive Analysis</p>
         <p class="line-height-210">There already 
            exists a few options for places that provide advice. Our most 
            notable competitors include Quora, Reddit, and Yahoo Answers. Taking 
@@ -329,14 +329,14 @@
     <div class="p-container">
       <div><p id="body-header">Final Interactive Prototypes</p></div>
       <div>
-        <p class="subheader" style="text-align: center">Answerer Interface</p>
+        <p class="snaash-subheader" style="text-align: center">Answerer Interface</p>
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
       </div>
 
       <div></div>
 
       <div>
-        <p class="subheader" style="text-align: center">Asker Interface</p>
+        <p class="snaash-subheader" style="text-align: center">Asker Interface</p>
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
       </div>
     </div>
@@ -364,7 +364,7 @@
     <div class="conclusion-container">
       <div></div>
       <div>
-        <p class="subheader">Future Plans</p>
+        <p class="snaash-subheader">Future Plans</p>
         <p class="line-height-210">Given a chance to bring Snaash to life, we 
            would need financing to pay for a team of software developers to 
            develop the application. In addition, we would need to find a way to 
@@ -374,7 +374,7 @@
 
     <div id="footer">
       <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
-      <p id="note">Built from the ground up</p>
+      <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
 
