--- a/zilter.html
+++ b/zilter.html
@@ -76,17 +76,50 @@
            building a web application to serve a set of target users. The way 
            we materialized this goal was via an web application concept that 
            aims to ease the shopping experience in its entirety by eliminating 
-           the need for users to conduct research on a product.</p>
+           the need for users to conduct research on a product.</p> <br/>
+        <p class="line-height-210">Zilter’s sole purpose is to enhance the 
+           recreational activity of online shopping. Online shopping for 
+           entertainment gadgets and appliances (e.g. TVs, stereos, laptops, 
+           headphones) can be a tedious task, especially with all the research 
+           required to get the best product at the best price. This web app 
+           provides the user with all the information they need to make an 
+           informed decision: standard product information, photos, videos, and 
+           official reviews pulled from external websites. And as always, the 
+           sources are cited in a bibliography.</p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Responsibility</p></div>
       <div>
-        <p class="line-height-210">My main role was to implement mockups into 
-           user testable prototypes and in turn, present these to an audience. 
-           I shared the responsibility of performing user testing and turning 
-           feedback into thoughtful design changes.</p>
+        <p class="line-height-210">My main role was to implement digital 
+           mockups into user testable prototypes and in turn, present these to 
+           an audience while delivering a pitch for our concept. I shared the 
+           responsibility of performing user testing and turning feedback into 
+           thoughtful design tweaks. </p>
+      </div>
+    </div>
+
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p class="subheader zilter-subheader">Branding</p>
+        <p class="line-height-210">The name was inspired by the physical 
+           functionality of a filter. Like a filter, we hope that our web app 
+           removes unwanted noise when trying to separate out important and 
+           non-important information.</p> <br/>
+        <p class="line-height-210">The black and gray color scheme was chosen 
+           to reflect the simplicity of our mission goal of making product 
+           purchases clear and straightforward. The focus of our site are the 
+           products themselves so minimal attention should go towards anything 
+           else. The green accents were infused to add a splash of color 
+           representing the excitement of making a purchase and also to build 
+           brand identity. Furthermore, the black and green combination is 
+           reminiscent of old school terminals which brings us to the new age 
+           of information that our web app presents. The Zilter logo accentuates 
+           the letter Z by shaping it into the silhouette of a lightning bolt 
+           which represents fast access to information at one’s fingertips that 
+           we hope to provide users in order to make an informed purchase.</p>
       </div>
     </div>
 
@@ -95,7 +128,7 @@
 
     <div id="footer">
       <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
-      <p id="note">Built from the ground up</p>
+      <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
     
