more snaash + work banners

--- a/caida.html
+++ b/caida.html
@@ -42,19 +42,17 @@
           <div>
             <p id="work-title">UX Developer Internship</p>
             <div class="inline-div" style="padding-right: 4.5vw">
-              <p id="work-header">Date</p>
-              <p id="work-header">Duration</p>
+              <p id="work-header">Timeline</p>
               <p id="work-header">Teammate</p>
               <p id="work-header">Supervisor</p>
             </div>
             <div class="inline-div">
-              <p id="work-value">July 2018</p>
-              <p id="work-value">3 Months</p>
+              <p id="work-value">July 2018 — September 2018</p>
               <p id="work-value">J. Chan</p>
               <p id="work-value">R. Mok</p>
             </div>
           </div> 
-          <div class="work-logo"><img src="assets/caida/caida.png" width=50%><p id="logo-caption">Center for Applied Internet Data Analysis</p></div>
+          <!-- <div class="work-logo"><img src="assets/caida/caida.png" width=50%><p id="logo-caption">Center for Applied Internet Data Analysis</p></div> -->
         </div>
       </div>
     </div>
