--- a/zilter.html
+++ b/zilter.html
@@ -42,15 +42,13 @@
           <div>
             <p id="work-title">Zilter Web App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
-              <p id="work-header">Date</p>
-              <p id="work-header">Duration</p>
+              <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
               <p id="work-header">Teammates</p>
               <p id="work-header">Course</p>
             </div>
             <div class="inline-div">
-              <p id="work-value">October 2018</p>
-              <p id="work-value">2.5 Months</p>
+              <p id="work-value">October 2018 — December 2018</p>
               <p id="work-value">UX Developer</p>
               <p id="work-value">C. Wong, L. Ahn</p>
               <p id="work-value">Interaction Design</p>
