--- a/snaash.html
+++ b/snaash.html
@@ -42,15 +42,13 @@
           <div>
             <p id="work-title">Snaash iOS App</p>
             <div class="inline-div" style="padding-right: 4.5vw">
-              <p id="work-header">Date</p>
-              <p id="work-header">Duration</p>
+              <p id="work-header">Timeline</p>
               <p id="work-header">Role</p>
               <p id="work-header">Teammates</p>
               <p id="work-header">Course</p>
             </div>
             <div class="inline-div">
-              <p id="work-value">August 2018</p>
-              <p id="work-value">1 Month</p>
+              <p id="work-value">August 2018 — September 2018</p>
               <p id="work-value">UX Designer</p>
               <p id="work-value">A. Davalos, H. Bae, N. Nikiforov, S. Natalius, S. Somers</p>
               <p id="work-value">Usability and Information Architecture</p>
@@ -84,9 +82,9 @@
 
     <div class="impact-container">
       <div></div>
-      <div><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(50%);"></div>
+      <div><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 80%"></div>
       <div class="caption quote">
-        <p class="line-height-210"><i>“ SNAASH is bridging the gap between generations. The elderly can 
+        <p class="line-height-210"><i><span style="font-size: 3vw">“ </span>SNAASH is bridging the gap between generations. The elderly can 
            share advice with those who need it and the young ones can ask for 
            guidance. Through their app, you’re able to post a question and 
            receive a thoughtful voice response from someone who may have 
@@ -101,8 +99,13 @@
         <p class="line-height-210">Given the broad prompt of creating a digital 
            tool for a population of elders, my initial contribution was helping 
            narrow our thoughts to a more focused concept: </p>
-        <br/> <br/>
-        <p class="snaash-subheader">Need Finding</p>
+      </div>
+    </div>
+
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p class="subheader snaash-subheader">Need Finding</p>
         <p class="line-height-210">I felt that older generations needed a way 
            to keep up-to-date with younger generations in terms of culture, 
            trends, etc. For example, grandparents have a difficult time trying 
@@ -138,7 +141,7 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="snaash-subheader">Information Architecture</p>
+        <p class="subheader snaash-subheader">Information Architecture</p>
         <p class="line-height-210">With our advice-giving idea in mind, we set out to outline the 
            information architecture, first with post-it notes then digitally 
            with more detail. We determined that we would build for mobile 
@@ -170,14 +173,13 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="snaash-subheader">Prototyping</p>
+        <p class="subheader snaash-subheader">Prototyping</p>
         <p class="line-height-210">After reviewing what was outlined, we decided we wanted to keep only 
            what was essential in order to meet usability standards as well as 
            create a streamlined user experience, especially for 50+ aged folks.
            <br/><br/>
            As a result, there were two types of screens to build for: 
            <b>answerers</b> (aged 50+) and <b>askers</b> (all ages). 
-           <br/><br/>
            The answerers only need to decide between skipping a question or 
            answering it, whereas the askers can browse questions or post their own.</p>
       </div>
@@ -217,12 +219,12 @@
     <div class="body-container" style="margin-top: 10vw; margin-bottom: 2vw">
       <div></div>
       <div>
-        <p class="snaash-subheader">Competitive Analysis</p>
+        <p class="subheader snaash-subheader">Competitive Analysis</p>
         <p class="line-height-210">There already 
            exists a few options for places that provide advice. Our most 
            notable competitors include Quora, Reddit, and Yahoo Answers. Taking 
            a closer look at the competition, we singled each one out and 
-           summarized Snaash’s advantages over them:</p>
+           summarized Snaash’s advantages over them:</p> <br/> <br/>
       </div>
     </div>
 
@@ -235,10 +237,10 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="line-height-210"><b>Notable Features</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
            — Accountability and Maturity <br/>
            — “BNBR (Be Nice Be Respectful)” Policy</p> <br/>
-        <p class="line-height-210"><b>Comments:</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
            One complaint is that some Quora users can be immature because there 
            is no restriction on who can ask/answer questions (besides having an 
            account). By enforcing an age restriction on who can answer questions, 
@@ -260,11 +262,11 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="line-height-210"><b>Notable Features</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
            — Semi-Anonymity through Usernames <br/>
            — Outdated yet Minimal Design <br/>
            — Pay (“give gold”) to Unlock Features</p> <br/>
-        <p class="line-height-210"><b>Comments:</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
            Though usernames are semi-anonymous, post/comment history is 
            available to anyone. On Snaash, we want to keep the confidentiality 
            of users who post questions seeking advice. Reddit also allows users 
@@ -282,11 +284,11 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="line-height-210"><b>Notable Features</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
            — Link all Activity back to User <br/>
            — Anonymity through Nickname <br/>
            — Questions have Opening and Closing Period</p> <br/>
-        <p class="line-height-210"><b>Comments:</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
            Yahoo has a feature of linking all activity back to its user, which 
            the user can delete during a temporary window of time. A user can be 
            anonymous to the public through a nickname but any activity is still 
@@ -306,11 +308,11 @@
     <div class="body-container">
       <div></div>
       <div>
-        <p class="line-height-210"><b>Notable Features</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
            — Complete Anonymity <br/>
            — Age Restriction for Respondants <br/>
            — Voice Answers</p> <br/>
-        <p class="line-height-210"><b>Comments:</b> <br/>
+        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
            Snaash allows users to ask questions to a qualified group of elders 
            without having their profie revealed. Snaash borrows a feature from 
            other competitors: a voting system where the best answers can be 
@@ -329,15 +331,15 @@
     <div class="p-container">
       <div><p id="body-header">Final Interactive Prototypes</p></div>
       <div>
-        <p class="snaash-subheader" style="text-align: center">Answerer Interface</p>
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
+        <p class="snaash-subheader" style="text-align: center">Answerer Interface</p>
       </div>
 
       <div></div>
 
       <div>
-        <p class="snaash-subheader" style="text-align: center">Asker Interface</p>
         <iframe id="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
+        <p class="snaash-subheader" style="text-align: center">Asker Interface</p>
       </div>
     </div>
 
@@ -364,7 +366,7 @@
     <div class="conclusion-container">
       <div></div>
       <div>
-        <p class="snaash-subheader">Future Plans</p>
+        <p class="subheader snaash-subheader">Future Plans</p>
         <p class="line-height-210">Given a chance to bring Snaash to life, we 
            would need financing to pay for a team of software developers to 
            develop the application. In addition, we would need to find a way to 
